<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <id.co.viva.news.app.component.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_forgot_password"
        android:textColor="@color/grey_new"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label_forgot_password_caps"/>
    <id.co.viva.news.app.component.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_please_input_email"/>
    <EditText
        android:id="@+id/et_forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btn_send_forgot_password"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_send_email"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        custom:pb_colorComplete="@color/green"
        custom:pb_colorNormal="@color/red_thunder"
        custom:pb_colorPressed="@color/red"
        custom:pb_colorProgress="@color/purple_plum"
        custom:pb_textComplete="@string/label_favorite_navigation_title_confirm"
        custom:pb_textProgress="@string/label_loading"/>
    <id.co.viva.news.app.component.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_success_send_email"
        android:layout_marginTop="40dp"
        android:textColor="@color/green"
        android:id="@+id/text_success_send_email"/>
</LinearLayout>