<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:floatview="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_viva_coid"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <id.co.viva.news.app.component.FloatingLabelView
            android:id="@+id/form_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            floatview:floatHintText="@string/label_hint_email"
            floatview:floatHintTextSize="12"
            floatview:floatHintTextColorFocused="@color/blue"
            floatview:floatHintTextColorUnFocused="@color/grey_new"
            floatview:floatHintTextStyle="bold"
            floatview:textColor="@color/black"
            floatview:textSize="18"
            floatview:textBackground="@drawable/text_background" />
        <id.co.viva.news.app.component.FloatingLabelView
            android:id="@+id/form_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            floatview:floatHintText="@string/label_hint_password"
            floatview:floatHintTextColorFocused="@color/blue"
            floatview:floatHintTextColorUnFocused="@color/grey_new"
            floatview:floatHintTextStyle="bold"
            floatview:isPassword="true"
            floatview:floatHintTextSize="12"
            floatview:textBackground="@drawable/text_background"
            floatview:textColor="@color/black"
            floatview:textSize="18"/>
    </LinearLayout>
    <id.co.viva.news.app.component.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/label_forgot_password"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="5dp">
        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_log_in"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginRight="2.5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            custom:pb_colorComplete="@color/green"
            custom:pb_colorNormal="@color/red_thunder"
            custom:pb_colorPressed="@color/red"
            custom:pb_colorProgress="@color/purple_plum"
            custom:pb_textComplete="@string/label_favorite_navigation_title_confirm"
            custom:pb_textProgress="@string/label_loading" />
        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="2.5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_register"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            custom:pb_colorComplete="@color/blue"
            custom:pb_colorNormal="@color/lynch"
            custom:pb_colorPressed="@color/transparent"
            custom:pb_colorProgress="@color/light_white"
            custom:pb_textComplete="@string/label_favorite_navigation_title_confirm"
            custom:pb_textProgress="@string/label_loading"/>
    </LinearLayout>
    <id.co.viva.news.app.component.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_login_with"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">
        <ImageView
            android:id="@+id/img_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_facebook"/>
        <ImageView
            android:id="@+id/img_gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gplus"/>
        <ImageView
            android:id="@+id/img_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_path"/>
    </LinearLayout>
</LinearLayout>