<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/container"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/profile_bg"
                android:id="@+id/layout_background_profile_photo">
                <com.pkmmte.view.CircularImageView
                    android:id="@+id/img_thumb_profile"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:background="@drawable/ic_profile"
                    android:layout_centerVertical="true"/>
                <View
                    android:layout_toRightOf="@id/img_thumb_profile"
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="35dp"
                    android:id="@+id/separator_profile_page"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/separator_profile_page"
                    android:orientation="vertical">
                    <id.co.viva.news.app.component.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_profile_name"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/abc_action_bar_up_description"/>
                    <id.co.viva.news.app.component.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:id="@+id/tv_profile_email"
                        android:textSize="14sp"
                        android:text="@string/abc_action_menu_overflow_description"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:id="@+id/layout_profile_user_data"
                android:layout_below="@id/layout_background_profile_photo">
                <id.co.viva.news.app.component.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="14sp"
                    android:text="@string/label_registrasi_gender"/>
                <Spinner
                    android:id="@+id/spin_regist_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="30dp"
                    android:textColorHint="@color/date_color"/>
                <id.co.viva.news.app.component.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="14sp"
                    android:text="@string/label_registrasi_birthdate"/>
                <EditText
                    android:id="@+id/form_regist_birthdate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:hint="@string/label_hint_picker_date"
                    android:textSize="12sp"
                    android:layout_marginLeft="30dp"
                    android:textColorHint="@color/date_color"/>
                <id.co.viva.news.app.component.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/red"
                    android:layout_marginLeft="30dp"
                    android:textSize="14sp"
                    android:text="@string/label_registrasi_country"/>
                <EditText
                    android:id="@+id/form_regist_country"
                    android:layout_width="fill_parent"
                    android:text="@string/label_registrasi_default_country"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="30dp"
                    android:textColorHint="@color/date_color"/>
                <id.co.viva.news.app.component.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:text="@string/label_registrasi_province"/>
                <Spinner
                    android:id="@+id/spin_regist_province"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginRight="30dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="30dp"
                    android:textColorHint="@color/date_color"/>
                <id.co.viva.news.app.component.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="14sp"
                    android:text="@string/label_registrasi_city"/>
                <Spinner
                    android:id="@+id/spin_regist_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginRight="30dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="30dp"
                    android:textColorHint="@color/date_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/layout_profile_user_data">
                <com.dd.CircularProgressButton
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:cpb_textComplete="@string/label_logout_complete"
                    app:cpb_textError="@string/label_logout_failed"
                    app:cpb_textIdle="@string/label_logout" />
                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/btn_change_data_user"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/label_save_data_profile"
                    custom:pb_colorComplete="@color/green"
                    custom:pb_colorNormal="@color/red"
                    custom:pb_colorPressed="@color/cpb_red_dark"
                    custom:pb_colorProgress="@color/blue"
                    custom:pb_textComplete="@string/label_success_save_data_profile"
                    custom:pb_textProgress="@string/label_loading"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="#AA000000"
            android:clickable="true"
            android:gravity="bottom"
            android:visibility="gone" />
        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coachmark_img_profile"></RelativeLayout>
    </FrameLayout>
</ScrollView>